# Otel-DevopsProject

./: .docker-compose.yml.swp  .env  README.md  docker-compose.yml  docker-compose.yml.backup  docker-compose1.yml  enhanced-image-fix.js  envoy.yaml  fix-images.js  image-fix-helper.html  test-images.html  ultimate-image-fix.js
Kuberenetes/: Serviceaccount.yaml  apply-fixes.sh  configmaps.yaml  deploy-otel-demo.ps1  deploy-otel-demo.sh  deploy.ps1  deploy.sh  fix-deployment.ps1  fix-deployment.sh  fix-remaining-issues.sh  namespace.yaml  quick-fix.ps1  quick-fix.sh  rbac.yaml
Kuberenetes/ad/: deploy.yaml  service.yaml
Kuberenetes/cart/: deploy.yaml  service.yaml
Kuberenetes/checkout/: deploy.yaml  service.yaml
Kuberenetes/currency/: deploy.yaml  service.yaml
Kuberenetes/email/: deploy.yaml  service.yaml
Kuberenetes/flagd/: deploy.yaml  service.yaml
Kuberenetes/frontend/: deploy.yaml  service.yaml
Kuberenetes/frontend-proxy/: deploy.yaml  service.yaml
Kuberenetes/image-provider/: deploy.yaml  service.yaml
Kuberenetes/otelcol/: deploy.yaml  service.yaml
Kuberenetes/payment/: deploy.yaml  service.yaml
Kuberenetes/product-catalog/: deploy.yaml  service.yaml
Kuberenetes/recommendation/: deploy.yaml  service.yaml
Kuberenetes/shipping/: deploy.yaml  service.yaml
Kuberenetes/valkey/: deploy.yaml  service.yaml
microservices/ad/: Dockerfile
microservices/cart/src/: Dockerfile  Program.cs  cart.csproj
microservices/checkout/: Dockerfile  go.mod
microservices/currency/: CMakeLists.txt  Dockerfile
microservices/currency/genproto/: CMakeLists.txt
microservices/currency/src/: server.cpp
microservices/frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json
microservices/frontend/cypress/e2e/: Checkout.cy.ts
microservices/frontend/gateways/rpc/: Ad.gateway.ts  Cart.gateway.ts  Checkout.gateway.ts  Currency.gateway.ts  ProductCatalog.gateway.ts  Recommendations.gateway.ts  shipping.gateway.ts
microservices/frontend/pages/: index.tsx
microservices/frontend/pages/api/: cart.ts  currency.ts  products.ts
microservices/frontend/protos/: demo.ts
microservices/frontend/types/: global.d.ts
microservices/frontend/utils/: Cypress.ts  createBanner.js  createBetterImages.js  createImages.js  createPNGImages.js  createRealisticImages.js  createTextImages.js  createVisibleImages.js  grpcClients.d.ts  grpcClients.js  grpcClients.ts  imageLoader.js
microservices/frontend/utils/telemetry/: FrontendTracer.ts  SessionIdProcessor.ts
microservices/image-provider/: Dockerfile  package-lock.json  package.json  server.js
microservices/payment/: Dockerfile  index.js
microservices/product-catalog/: Dockerfile  go.mod
microservices/shipping/: Dockerfile  README.Docker.md
